--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ server.servlet.contextPath =/wealthstream
 cors.rest=*
 cors.rest.allowed-headers=*
 cors.rest.allowed-methods=*
+app.jwt.secret=abcdefghijklmnOPQRSTUVWXYZ
