--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=wealthstream;encrypt=false
-spring.datasource.username=sa
-spring.datasource.password=M@rcos123
+spring.datasource.url=jdbc:sqlserver://sql.bsite.net\\MSSQL2016;databaseName=mguzman_mguzman;encrypt=false
+spring.datasource.username=mguzman_mguzman
+spring.datasource.password=M@rcos2023*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 server.servlet.contextPath =/wealthstream
